--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			.pic{
 				height: 100%;
 				background-color: red;
-				background-image: url("https://github.com/xmt3061123/chuxing/blob/main/gaochunchun.jpg?raw=true");
+				background-image: url("http://a1.qpic.cn/psc?/V51V5psW0TEiOi0E5FZr3C3a820EqEEL/ruAMsa53pVQWN7FLK88i5oD6XwKqCVaH8n*wa3r0S6Pfplf0K5CzHBm6iAcCmN9joQkhYOV.J40ZeHIv.G70sROYnvPo.E0ITq5n9wVyqQY!/b&ek=1&kp=1&pt=0&bo=JgGcAQAAAAABF4o!&tl=3&vuin=1437604039&tm=1606971600&sce=60-2-2&rf=viewer_4");
 				background-size: cover;
 			}
 			.topcard p{
@@ -95,13 +95,13 @@
 		<div class="topcard">
 			<div>
 			<p style="font-weight: 700; padding-top: 5px; font-size: 23px; padding: 4px;" contenteditable="true">
-				<span id="surname">高</span><span id="givenname">春春</span>
+				<span id="surname">艾克达·</span><span id="givenname">阿布都克力木</span>
 			</p>
 			<p contenteditable="true">
-				学号：20<span id="18">18</span>02<span id="random">70</span><span id="random2">11</span><span id="random3">06</span>
+				学号：20<span id="17">17</span>02<span id="random">70</span><span id="random2">11</span><span id="random3">22</span>
 			</p>
 			<p contenteditable="true">
-				班级：电子信息工程1801
+				班级：电子信息工程1701
 			</p>
 			<p contenteditable="true">
 				开始：<span id="date1"></span> 07:00
@@ -134,7 +134,7 @@
 			}
 		</script>
 		<script>
-			var timeleft = 190;
+			var timeleft = 181;
 			var timer = setInterval(function(){
 				timeleft--;
 				document.getElementById("countdown").textContent = timeleft;
@@ -165,12 +165,12 @@
 			document.getElementById('date3').innerHTML = y+"-"+m+"-"+d;
 		</script>
 		<script>
-			var surList = new Array("高");
+			var surList = new Array("艾克达");
 			var randomName = Math.floor(Math.random()*surList.length);
 			document.getElementById("surname").innerHTML = surList[randomName];
 		</script>
 		<script>
-			var givenList = new Array("春春");
+			var givenList = new Array("·阿布都克力木");
 			var randomName2 = Math.floor(Math.random()*givenList.length);
 			document.getElementById("givenname").innerHTML = givenList[randomName2];
 		</script>
